2003-01-30  Ville Palo <vi64pa@koti.soon.fi>

	* ExpressionElement.cs: Added new file. This file is for parsing
	  and DataData.Select () -methods and DataColumn.Expression -property
	* DataTable.cs: Implemented Select(string) -method	
	
2003-01-28  Ville Palo <vi64pa@koti.soon.fi>

	* DataSet.cs: One little fix to writing xml
	
2003-01-27  Ville Palo <vi64pa@koti.soon.fi>

	* XmlSchemaMapper.cs: Some fixes.
	* DatSet.cs: Some XmlFixes and BeginInit ()/ EndInit () -fix

		
2003-01-24  Ville Palo <vi64pa@koti.soon.fi>

	* UniqueConstraint.cs: Do not set columns Unique property true 
	as a default.
	* ForeignKeyConstraint.cs: Add UniqueConstraint to parent Table
	
2003-01-18  Ville Palo <vi64pa@koti.soon.fi>

	* DataTableCollection.cs: Now names new DataTable if it doesn't 
	already have a name.
	
2003-01-17  Ville Palo <vi64pa@koti.soon.fi>

	* XmlSchemaMapper.cs: Improvments.
	* XmlConstaints.cs: Added more constants.
	* DataSet.cs: Improvments of reading and writing xml
	* DataColumn.cs: Added default values of properties.
		
2003-01-14  Ville Palo <vi64pa@koti.soon.fi>

	* XmlSchemaMapper.cs: Some improvments
	
2003-01-13  Ville Palo <vi64pa@koti.soon.fi>

	* DataRowCollection.cs: Added IndexOutOfRangeException
	* DataTableCollection.cs: Added OnCollectionChanging and 
	OnCollectionChanged events.
	* DataSet.cs: Many fixes. Implemented Clone () and Copy () -methods
	* DataTable.cs: Implemented Copy () and Clone () methods.
	* XmlDataLoader.cs: some fixes.
	* XmlSchemaMapper.cs: comments.
	
2003-01-08  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* DataColumnPropertyDescriptor.cs: store columnIndex in the .ctor.

2003-01-08  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* DataColumnPropertyDescriptor.cs: fixed typo.
	* DataViewManagerListItemTypeDescriptor.cs: added new internal property
	to get the DataViewManager and removed TablePD class.
	* DataTablePropertyDescriptor.cs: TablePD class is now this one as
	suggested by danmorg.
