@@ -307,7 +307,10 @@ namespace System.Data {
 		}
 
 		protected override void Dispose (bool disposing) {
-			
+			if (disposing)
+				Close ();
+
+			base.Dispose (disposing);
 		}
 
 		[MonoTODO]
